# v4l-video-test-app

./: .gitignore  CMakeLists.txt  IrisTestApp.cpp  LICENSE.txt  README.md  build.sh
data/config/: h264Decoder.json  h264Encoder.json
data/resource/: simple_AVC_720p_10fps_90frames.264  simple_AVC_720p_30fps_90frames.264
inc/: Buffer.h  ConfigParser.h  FFStreamParser.h  FFYUVParser.h  Log.h  UBWC_Utils.h  V4l2Codec.h  V4l2Decoder.h  V4l2Driver.h  V4l2Encoder.h
src/: ConfigParser.cpp  FFStreamParser.cpp  FFYUVParser.cpp  UBWC_Utils.cpp  V4l2Codec.cpp  V4l2Decoder.cpp  V4l2Driver.cpp  V4l2Encoder.cpp
third-parties/: aarch64_toolchain.cmake  prepare_3p_module.sh
